gitops/web-server/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: web-server
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: web-server
